--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
---extra-index-url=https://test.pypi.org/simple/
-slack_sdk==3.36.0.dev2
+slack-sdk==3.36.0.dev3
 slack-bolt>=1.21,<2
 
 # If you use a different LLM vendor, replace this dependency
